--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
   body {
     background-color: #252525;
     margin: 0;
-    color: #fafafa;
+    color: #252525;
     height: 100%;
     overflow: hidden;
     font-family: 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
