--- a/style.css
+++ b/style.css
@@ -3,31 +3,203 @@
     padding: 0;
   }
 
-  html {
-    height: 100%;
-  }
+html {
+  height: 100%;
+}
 
-  .main_content_container h1 {
-    font-size: 70px;
-    color: #fafafa;
+body {
+  background-image: linear-gradient(180deg, rgba(25,25,25,1) 61%, rgba(121,9,9,1) 100%);
+  margin: 0;
+  color: #fafafa;
+  height: 100%;
+  overflow: hidden;
+  font-family: 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 
-  }
-  
-  .main_content_wrapper h2 {
-    font-size: 30px;
+.canvas{
+  z-index: -1;
+}
 
-  }
+.main_content_container h1 {
+  font-size: 70px;
+  color: #fafafa;
+}
 
-  .main_content_wrapper h3 {
-    font-size: 15px;
+.headings h1 {
+  font-size: 70px;
+  color: #fafafa;
+}
 
-  }
+.headings a:hover{
+  text-shadow: 2px 2px 2px #ff0909;
+}
 
-  body {
-    background-color: #252525;
-    margin: 0;
-    color: #fafafa;
-    height: 100%;
-    overflow: hidden;
-    font-family: 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-  }
+.main_content_wrapper h2 {
+  font-size: 30px;
+
+}
+
+.main_content_wrapper h3 {
+  font-size: 15px;
+  align-items: center;
+}
+
+.main_content_wrapper{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.main_content_container{
+  font-size: 1rem;
+  color: #fafafa;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.headings{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.aboutMe_wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.aboutMe_container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.linkwrapper{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  color: #fafafa;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+a{
+  color: #fafafa;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-decoration: none; 
+}
+
+.currentProject_content:hover {
+  text-shadow: 2px 2px 2px #ff0909;
+}
+
+.WorkExample_content:hover {
+  text-shadow: 2px 2px 2px #ff0909;
+}
+
+.socials_wrapper{
+  position: absolute;
+  bottom: 5%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  z-index: 3;
+}
+
+.para{
+  text-align: center;
+  padding-left: 15vw;
+  padding-top: 1vw;
+  padding-right: 15vw;
+  font-size: 1.2rem;
+}
+
+.socials_container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.footer_container {
+  position: absolute;
+  bottom: 1%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  z-index: 3;
+}
+
+/* card */
+
+.card_content_row{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  flex-direction: row;
+}
+
+.card_content_wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.card{
+  color: #fafafa;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-left: 12px;
+  margin-right: 12px;
+  max-height: 300px;
+  min-height: 300px;
+  max-width: 307px;
+  min-width: 307px;
+}
+
+.card_img{
+  border-radius: 15px 15px 0px 0px;
+}
+
+
+.card_text{
+  padding-left: 1.25vw;
+  padding-bottom: 1vh;
+  max-height: 90px;
+  min-height: 90px;
+  max-width:280px;
+  min-width: 280px;
+}
+
+.card_link{
+  padding-left: 55%;
+  padding-bottom: 10%;
+  max-height: 90px;
+  min-height: 90px;
+  max-width:300px;
+  min-width: 300px;
+}
+
+.card_link:hover {
+  color: #ff0909;
+}
+
+.a{
+  background-color: #970909;
+  border-radius: 15px;
+}
