--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   color: #fafafa;
   height: 100%;
   overflow: hidden;
-  font-family: 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: Raleway, sans-serif;
 }
 
 .canvas{
@@ -56,8 +56,10 @@ body {
 .main_content_container{
   font-size: 1rem;
   color: #fafafa;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Raleway, sans-serif;
 }
+
+
 
 .headings{
   display: flex;
@@ -87,12 +89,12 @@ body {
   justify-content: center;
   gap: 20px;
   color: #fafafa;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Raleway, sans-serif;
 }
 
 a{
   color: #fafafa;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Raleway, sans-serif;
   text-decoration: none; 
 }
 
@@ -111,16 +113,17 @@ a{
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Raleway, sans-serif;
   z-index: 3;
 }
 
 .para{
   text-align: center;
-  padding-left: 15vw;
+  padding-left: 30vw;
   padding-top: 1vw;
-  padding-right: 15vw;
+  padding-right: 30vw;
   font-size: 1.2rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .socials_container{
@@ -138,7 +141,7 @@ a{
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family:  Raleway, sans-serif;
   z-index: 3;
 }
 
@@ -184,6 +187,7 @@ a{
   min-height: 90px;
   max-width:280px;
   min-width: 280px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .card_link{
@@ -203,3 +207,109 @@ a{
   background-color: #970909;
   border-radius: 15px;
 }
+
+.dotcontainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: .5vh;
+}
+
+.dot {
+  cursor: pointer;
+  height: 10px;
+  width: 10px;
+  margin-top: 2px;
+  margin-left: 2px;
+  margin-right: 2px;
+  background-color: #790909;
+  border-radius: 50%;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #ff0909;
+}
+
+  /* Next & previous buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: #970909;
+    background-color: #252525;
+    font-weight: bold;
+    font-size: 25px;
+    transition: 0.6s ease;
+    border-radius: 90px 90px 90px 90px;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: .3vw;
+  }
+
+  .prev {
+    left: .3vw;
+  }
+
+  h4{
+    color: #fafafa;
+    font-family:  Raleway, sans-serif;
+    padding-left: 1vw;
+    padding-bottom: 1vh;
+    margin-top: .5vh;
+    margin-bottom: .5vh;
+  }
+
+  .slideshow_container {
+    width:900px;
+    padding-top: 2%;
+    position: relative;
+    margin: auto;
+    border-radius: 15%;
+    margin-bottom: .5vh;
+  }
+  
+
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .5}
+    to {opacity: 1}
+  }
+
+  .slide{
+    display: flex;
+  }
+
+  .mySlides{
+    display: none;
+    text-align: center;
+  }
+
+  .myText{
+    display: none;
+  }
+
+  .activeText {
+    display: block;
+  }
+
+  .captiom{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
