--- a/style.css
+++ b/style.css
@@ -3,313 +3,31 @@
     padding: 0;
   }
 
-html {
-  height: 100%;
-}
-
-body {
-  background-image: linear-gradient(180deg, rgba(25,25,25,1) 61%, rgba(121,9,9,1) 100%);
-  margin: 0;
-  color: #fafafa;
-  height: 100%;
-  overflow: hidden;
-  font-family: Raleway, sans-serif;
-}
-
-.canvas{
-  z-index: -1;
-}
-
-.main_content_container h1 {
-  font-size: 70px;
-  color: #fafafa;
-}
-
-.headings h1 {
-  font-size: 70px;
-  color: #fafafa;
-}
-
-.headings a:hover{
-  text-shadow: 2px 2px 2px #ff0909;
-}
-
-.main_content_wrapper h2 {
-  font-size: 30px;
-
-}
-
-.main_content_wrapper h3 {
-  font-size: 15px;
-  align-items: center;
-}
-
-.main_content_wrapper{
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.main_content_container{
-  font-size: 1rem;
-  color: #fafafa;
-  font-family: Raleway, sans-serif;
-}
-
-
-
-.headings{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.aboutMe_wrapper{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.aboutMe_container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.linkwrapper{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  color: #fafafa;
-  font-family: Raleway, sans-serif;
-}
-
-a{
-  color: #fafafa;
-  font-family: Raleway, sans-serif;
-  text-decoration: none; 
-}
-
-.currentProject_content:hover {
-  text-shadow: 2px 2px 2px #ff0909;
-}
-
-.WorkExample_content:hover {
-  text-shadow: 2px 2px 2px #ff0909;
-}
-
-.socials_wrapper{
-  position: absolute;
-  bottom: 5%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: Raleway, sans-serif;
-  z-index: 3;
-}
-
-.para{
-  text-align: center;
-  padding-left: 30vw;
-  padding-top: 1vw;
-  padding-right: 30vw;
-  font-size: 1.2rem;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.socials_container{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-}
-
-.footer_container {
-  position: absolute;
-  bottom: 1%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family:  Raleway, sans-serif;
-  z-index: 3;
-}
-
-/* card */
-
-.card_content_row{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-  flex-direction: row;
-}
-
-.card_content_wrapper{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.card{
-  color: #fafafa;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin-left: 12px;
-  margin-right: 12px;
-  max-height: 300px;
-  min-height: 300px;
-  max-width: 307px;
-  min-width: 307px;
-}
-
-.card_img{
-  border-radius: 15px 15px 0px 0px;
-}
-
-
-.card_text{
-  padding-left: 1.25vw;
-  padding-bottom: 1vh;
-  max-height: 90px;
-  min-height: 90px;
-  max-width:280px;
-  min-width: 280px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.card_link{
-  padding-left: 55%;
-  padding-bottom: 10%;
-  max-height: 90px;
-  min-height: 90px;
-  max-width:300px;
-  min-width: 300px;
-}
-
-.card_link:hover {
-  color: #ff0909;
-}
-
-.a{
-  background-color: #970909;
-  border-radius: 15px;
-}
-
-.dotcontainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20px;
-  margin-bottom: .5vh;
-}
-
-.dot {
-  cursor: pointer;
-  height: 10px;
-  width: 10px;
-  margin-top: 2px;
-  margin-left: 2px;
-  margin-right: 2px;
-  background-color: #790909;
-  border-radius: 50%;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #ff0909;
-}
-
-  /* Next & previous buttons */
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: #970909;
-    background-color: #252525;
-    font-weight: bold;
-    font-size: 25px;
-    transition: 0.6s ease;
-    border-radius: 90px 90px 90px 90px;
-    user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: .3vw;
+  html {
+    height: 100%;
   }
 
-  .prev {
-    left: .3vw;
-  }
-
-  h4{
+  .main_content_container h1 {
+    font-size: 70px;
     color: #fafafa;
-    font-family:  Raleway, sans-serif;
-    padding-left: 1vw;
-    padding-bottom: 1vh;
-    margin-top: .5vh;
-    margin-bottom: .5vh;
-  }
-
-  .slideshow_container {
-    width:900px;
-    padding-top: 2%;
-    position: relative;
-    margin: auto;
-    border-radius: 15%;
-    margin-bottom: .5vh;
+    font-family: Arial, Helvetica, sans-serif,
   }
   
+  .main_content_wrapper h2 {
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif,
+  }
 
-  /* Fading animation */
-  .fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
+  .main_content_wrapper h3 {
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif,
+  }
+
+  body {
+    background-color: #252525;
+    margin: 0;
+    color: #fafafa;
+    height: 100%;
+    overflow: hidden;
   }
   
-  @keyframes fade {
-    from {opacity: .5}
-    to {opacity: 1}
-  }
-
-  .slide{
-    display: flex;
-  }
-
-  .mySlides{
-    display: none;
-    text-align: center;
-  }
-
-  .myText{
-    display: none;
-  }
-
-  .activeText {
-    display: block;
-  }
-
-  .captiom{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
