--- a/projects/page.css
+++ b/projects/page.css
@@ -1,5 +1,3 @@
-
-
 .columnsplitter{
     padding-top: 5%;
     display: flex;
@@ -8,6 +6,7 @@
     align-items: stretch;
     width: 100%;
     height: 100%;
+    overflow-y: hidden;
     background-color: #C1121F;
     color: #FDF0D5;
 }
