--- a/slideshow.css
+++ b/slideshow.css
@@ -62,7 +62,9 @@
     padding: 8px 12px;
     position: relative;
     width: 100%;
+    display: flex;
     text-align: center;
+    align-items: center;
   }
 
   .heading {
