--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,9 @@ section{
   display: flex;
   padding: 4rem 2rem;
   background-color: var(--block-background);
+  background-image: url("assets/tomology.png");
   color: var(--secondary-color);
-
+  background-size: contain;
 }
 
 p {
@@ -179,6 +180,7 @@ header nav a:hover {
   width: 100%;
   justify-content: center;
   align-items: center;
+  background-image: none;
   background-color: var(--secondary-color);
   color: var(--off-black);
   position: relative;
